--- a/src/public/components/folderDropzone/index.html
+++ b/src/public/components/folderDropzone/index.html
@@ -8,7 +8,6 @@
 		html,
 		body {
 			height: 100%;
-			background: lawngreen;
 			padding: 0;
 			margin: 0;
 		}
@@ -18,13 +17,39 @@
 		}
 
 		#dropzone {
-			background: deeppink;
 			width: 100%;
 			height: 100%;
+
+			border: 2px solid;
+			box-sizing: border-box;
+			background: #000;
+			color: #000;
+
+			display: table;
+
+			/*background-image: url('');
+			background-repeat: no-repeat;
+			background-position: 50% 50%;*/
+
+			transition: color 0.25s linear, background-color 0.25s linear, border-color 0.25s linear;
 		}
 
-		#dropzone.hover {
-			background: greenyellow;
+		.icon{
+			display: table-cell;
+			vertical-align: middle;
+			text-align: center;
+		}
+		
+		.icon svg {
+			width: 33%;
+			height: 33%;
+		}
+
+		.icon polygon,
+		.icon polyline,
+		.icon line {
+			stroke-width: 1.25;
+			transition: stroke 0.25s linear;
 		}
 
 		button {
@@ -34,64 +59,152 @@
 </head>
 <body style="-webkit-app-region: drag">
 <div id="dropzone">
-
+		<div class="icon">
+			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px"
+			 width="64px" height="64px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+				<polygon fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="63,18 63,54 1,54 1,10 22,10 30,18 "/>
+				<polyline fill="none" stroke="#000000" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" points="40,37 32,45
+					24,37 "/>
+				<g>
+					<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="45" x2="32" y2="25"/>
+				</g>
+			</svg>
+		</div>
 </div>
-<div style="position: absolute; top: 0">
+<div style="position: absolute; bottom: 10px; left: 10px">
 	<button id="reload">reload</button>
 </div>
 
 <script type="text/javascript">
-	// Get the current window aka this
-	var win = require('nw.gui').Window.get();
+	(function () {
+		// Get the current window aka this
+		var win = require('nw.gui').Window.get();
+		win.showDevTools();
 
-	window.onload = function () {
-		var dropzone = document.getElementById('dropzone');
+		var styleHandler = {
+			_style: null,
 
-		// prevent default behavior from changing page on dropped file
-		window.ondragover = function (e) {
-			e.preventDefault();
-			return false
-		};
-		window.ondrop = function (e) {
-			e.preventDefault();
-			return false
-		};
+			_background: localStorage.getItem('background'),
+			_color     : localStorage.getItem('color'),
+			_inverted  : localStorage.getItem('inverted'),
+			_invertedColor: localStorage.getItem('invertedColor'),
 
-		dropzone.ondragenter = function () {
-			this.className = 'hover';
-			return false;
-		};
-		dropzone.ondragleave = function () {
-			this.className = '';
-			return false;
-		};
-		dropzone.ondrop = function (e) {
-			var paths = [];
+			init: function () {
+				//this._head = document.head;
+				var style = document.createElement('style');
+				style.type = 'text/css';
 
-			e.preventDefault();
+				style.appendChild(document.createTextNode(''));
+				this._style = style;
+				document.head.appendChild(this._style);
 
-			this.className = '';
+				window.addEventListener('storage', this.onUpdate.bind(this), true);
 
-			for (var i = 0, l = e.dataTransfer.items.length; i < l; i++) {
-				var entry = e.dataTransfer.items[i].webkitGetAsEntry();
+				this.updateStyles();
+			},
 
-				if (entry.isFile) {
-					console.log('files are not supported!');
+			onUpdate: function (e) {
+				var changed = false;
+
+				if (e.key === 'background') {
+					this._background = e.newValue;
+					changed = true;
 				}
-				else if (entry.isDirectory) {
-					paths.push(e.dataTransfer.files[i].path);
+				else if (e.key === 'color') {
+					this._color = e.newValue;
+					changed = true;
 				}
-			}
 
-			if (paths.length) {
-				win.emit('drop', paths);
+				else if (e.key === 'inverted') {
+					this._inverted = e.newValue;
+				}
+
+				else if (e.key === 'invertedColor') {
+					this._invertedColor = e.newValue;
+				}
+
+				if (changed) {
+					this.updateStyles();
+				}
+			},
+
+			updateStyles: function () {
+				var dropzoneStyles = [
+							'background-color: ' + this._inverted,
+							'color: ' + this._invertedColor,
+							'border-color: ' + this._invertedColor
+				];
+
+				var dropzoneHoverStyles = [
+							'background-color: ' + this._invertedColor,
+							'color: ' + this._inverted,
+							'border-color: ' + this._inverted
+				];
+
+				var styles = [
+							'#dropzone { ' + dropzoneStyles.join(';\n') + ' }',
+							'#dropzone.hover { ' + dropzoneHoverStyles.join(';\n') + ' }',
+							'.icon polygon, .icon polyline, .icon line { stroke: ' + this._invertedColor + '}',
+							'#dropzone.hover .icon polygon, #dropzone.hover .icon polyline, #dropzone.hover line { stroke: ' + this._inverted + '}'
+				];
+
+				this._style.innerHTML = styles.join('\n');
 			}
 		};
-	};
 
-	document.getElementById('reload').onclick = function () {
-		win.reload();
-	}
+		styleHandler.init();
+
+		window.onload = function () {
+
+			var dropzone = document.getElementById('dropzone');
+
+			// prevent default behavior from changing page on dropped file
+			window.ondragover = function (e) {
+				e.preventDefault();
+				return false
+			};
+			window.ondrop = function (e) {
+				e.preventDefault();
+				return false
+			};
+
+			dropzone.ondragenter = function () {
+				this.className = 'hover';
+				return false;
+			};
+			dropzone.ondragleave = function () {
+				this.className = '';
+				return false;
+			};
+			dropzone.ondrop = function (e) {
+				var paths = [];
+
+				e.preventDefault();
+
+				this.className = '';
+
+				for (var i = 0, l = e.dataTransfer.items.length; i < l; i++) {
+					var entry = e.dataTransfer.items[i].webkitGetAsEntry();
+
+					if (entry.isFile) {
+						console.log('files are not supported!');
+					}
+					else if (entry.isDirectory) {
+						paths.push(e.dataTransfer.files[i].path);
+					}
+				}
+
+				if (paths.length) {
+					win.emit('drop', paths);
+				}
+			};
+		};
+
+		document.getElementById('reload').onclick = function () {
+			win.reload();
+			alert(localStorage.getItem('foo'));
+		}
+	})();
 </script>
 </body>
 </html>
