--- a/src/public/components/folderDropzone/index.html
+++ b/src/public/components/folderDropzone/index.html
@@ -10,15 +10,6 @@
 			height: 100%;
 			padding: 0;
 			margin: 0;
-		}
-
-		* {
-			-webkit-user-select: none;
-		}
-
-		#dropzone {
-			width: 100%;
-			height: 100%;
 
 			border: 2px solid;
 			box-sizing: border-box;
@@ -34,12 +25,25 @@
 			transition: color 0.25s linear, background-color 0.25s linear, border-color 0.25s linear;
 		}
 
-		.icon{
+		* {
+			-webkit-user-select: none;
+		}
+
+		#dropzone {
+			background: transparent;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+
+		.icon {
 			display: table-cell;
 			vertical-align: middle;
 			text-align: center;
 		}
-		
+
 		.icon svg {
 			width: 33%;
 			height: 33%;
@@ -58,18 +62,18 @@
 	</style>
 </head>
 <body style="-webkit-app-region: drag">
+<div class="icon">
+	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px"
+				 width="64px" height="64px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+					<polygon fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="63,18 63,54 1,54 1,10 22,10 30,18 "/>
+					<polyline fill="none" stroke="#000000" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" points="40,37 32,45
+						24,37 "/>
+					<g>
+						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="45" x2="32" y2="25"/>
+					</g>
+				</svg>
+</div>
 <div id="dropzone">
-		<div class="icon">
-			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px"
-			 width="64px" height="64px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-				<polygon fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="63,18 63,54 1,54 1,10 22,10 30,18 "/>
-				<polyline fill="none" stroke="#000000" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" points="40,37 32,45
-					24,37 "/>
-				<g>
-					<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="45" x2="32" y2="25"/>
-				</g>
-			</svg>
-		</div>
 </div>
 <div style="position: absolute; bottom: 10px; left: 10px">
 	<button id="reload">reload</button>
@@ -81,12 +85,7 @@
 		var win = require('nw.gui').Window.get();
 
 		var styleHandler = {
-			_style: null,
-
-			_background: localStorage.getItem('background'),
-			_color     : localStorage.getItem('color'),
-			_inverted  : localStorage.getItem('inverted'),
-			_invertedColor: localStorage.getItem('invertedBackgroundColor'),
+			_styleElement: null,
 
 			init: function () {
 				//this._head = document.head;
@@ -94,60 +93,52 @@
 				style.type = 'text/css';
 
 				style.appendChild(document.createTextNode(''));
-				this._style = style;
-				document.head.appendChild(this._style);
+				this._styleElement = style;
+				document.head.appendChild(this._styleElement);
 
 				window.addEventListener('storage', this.onUpdate.bind(this), true);
 
 				this.updateStyles();
 			},
 
+			get: function (key) {
+				return localStorage.getItem(key);
+			},
+
 			onUpdate: function (e) {
-				var changed = false;
+				var keys = [
+					'background',
+					'color',
+					'inverted',
+					'invertedBackgroundColor'
+				];
 
-				if (e.key === 'background') {
-					this._background = e.newValue;
-					changed = true;
-				}
-				else if (e.key === 'color') {
-					this._color = e.newValue;
-					changed = true;
-				}
-
-				else if (e.key === 'inverted') {
-					this._inverted = e.newValue;
-				}
-
-				else if (e.key === 'invertedBackgroundColor') {
-					this._invertedColor = e.newValue;
-				}
-
-				if (changed) {
+				if (keys.indexOf(e.key) !== -1) {
 					this.updateStyles();
 				}
 			},
 
 			updateStyles: function () {
 				var dropzoneStyles = [
-							'background-color: ' + this._inverted,
-							'color: ' + this._invertedColor,
-							'border-color: ' + this._invertedColor
+					'background-color: ' + this.get('inverted'),
+					'color: ' + this.get('invertedBackgroundColor'),
+					'border-color: ' + this.get('invertedBackgroundColor')
 				];
 
 				var dropzoneHoverStyles = [
-							'background-color: ' + this._invertedColor,
-							'color: ' + this._inverted,
-							'border-color: ' + this._inverted
+					'background-color: ' + this.get('invertedBackgroundColor'),
+					'color: ' + this.get('invertedBackgroundColor'),
+					'border-color: ' + this.get('inverted')
 				];
 
 				var styles = [
-							'#dropzone { ' + dropzoneStyles.join(';\n') + ' }',
-							'#dropzone.hover { ' + dropzoneHoverStyles.join(';\n') + ' }',
-							'.icon polygon, .icon polyline, .icon line { stroke: ' + this._invertedColor + '}',
-							'#dropzone.hover .icon polygon, #dropzone.hover .icon polyline, #dropzone.hover line { stroke: ' + this._inverted + '}'
+					'body { ' + dropzoneStyles.join(';\n') + ' }',
+					'body.hover { ' + dropzoneHoverStyles.join(';\n') + ' }',
+					'.icon polygon, .icon polyline, .icon line { stroke: ' + this.get('invertedBackgroundColor') + '}',
+					'.hover .icon polygon, .hover .icon polyline, .hover line { stroke: ' + this.get('inverted') + '}'
 				];
 
-				this._style.innerHTML = styles.join('\n');
+				this._styleElement.innerHTML = styles.join('\n');
 			}
 		};
 
@@ -168,11 +159,11 @@
 			};
 
 			dropzone.ondragenter = function () {
-				this.className = 'hover';
+				document.body.className = 'hover';
 				return false;
 			};
 			dropzone.ondragleave = function () {
-				this.className = '';
+				document.body.className = '';
 				return false;
 			};
 			dropzone.ondrop = function (e) {
@@ -180,7 +171,7 @@
 
 				e.preventDefault();
 
-				this.className = '';
+				document.body.className = '';
 
 				for (var i = 0, l = e.dataTransfer.items.length; i < l; i++) {
 					var entry = e.dataTransfer.items[i].webkitGetAsEntry();
