--- a/src/public/components/folderDropzone/index.html
+++ b/src/public/components/folderDropzone/index.html
@@ -8,13 +8,14 @@
 		html,
 		body {
 			height: 100%;
+			width: 100%;
 			padding: 0;
 			margin: 0;
 
 			border: 2px solid;
 			box-sizing: border-box;
-			background: #000;
-			color: #000;
+			background: #3c3c3c;
+			color: rgba(0,0,0,0);
 
 			display: table;
 
@@ -22,7 +23,15 @@
 			background-repeat: no-repeat;
 			background-position: 50% 50%;*/
 
-			transition: color 0.25s linear, background-color 0.25s linear, border-color 0.25s linear;
+
+		}
+
+		body.hover {
+		}
+		
+		body.hover #dropzone {
+			background-color: #00D97E;
+			z-index: 100;
 		}
 
 		* {
@@ -30,30 +39,51 @@
 		}
 
 		#dropzone {
-			background: transparent;
+			transition: background-color 0.25s ease;
+
+			background: rgba(0,0,0,0);
 			width: 100%;
 			height: 100%;
 			position: absolute;
 			top: 0;
 			left: 0;
 		}
+		
+		#background-wrapper {
+			width: 100%;
+			height: 100%;
+			background: no-repeat 50% 50%;
+		}
 
-		.icon {
+		.close-button-wrapper {
+			position: absolute;
+			bottom: 10px;
+			left: 0;
+			width: 100%;
+		}
+
+		.wrapper {
 			display: table-cell;
 			vertical-align: middle;
 			text-align: center;
 		}
 
-		.icon svg {
-			width: 33%;
-			height: 33%;
+		#close-button {
+			padding: 0;
+			border: none;
+			display: inline-block;
+			position: absolute;
+			bottom: 32px;
+			left: 50%;
+
+			background: transparent no-repeat 0 0;
+			cursor: pointer;
+			outline: none;
 		}
 
-		.icon polygon,
-		.icon polyline,
-		.icon line {
-			stroke-width: 1.25;
-			transition: stroke 0.25s linear;
+		#close-button:hover,
+		#close-button:focus {
+			background-position: 0 100%;
 		}
 
 		button {
@@ -62,87 +92,17 @@
 	</style>
 </head>
 <body style="-webkit-app-region: drag">
-<div class="icon">
-	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px"
-				 width="64px" height="64px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-					<polygon fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" points="63,18 63,54 1,54 1,10 22,10 30,18 "/>
-					<polyline fill="none" stroke="#000000" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" points="40,37 32,45
-						24,37 "/>
-					<g>
-						<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="32" y1="45" x2="32" y2="25"/>
-					</g>
-				</svg>
-</div>
-<div id="dropzone">
-</div>
-<div style="position: absolute; bottom: 10px; left: 10px">
-	<button id="reload">reload</button>
-</div>
+	<div id="background-wrapper"></div>
+
+	<div id="dropzone">
+	</div>
+
+	<button id="close-button"></button>
 
 <script type="text/javascript">
 	(function () {
 		// Get the current window aka this
 		var win = require('nw.gui').Window.get();
-
-		var styleHandler = {
-			_styleElement: null,
-
-			init: function () {
-				//this._head = document.head;
-				var style = document.createElement('style');
-				style.type = 'text/css';
-
-				style.appendChild(document.createTextNode(''));
-				this._styleElement = style;
-				document.head.appendChild(this._styleElement);
-
-				window.addEventListener('storage', this.onUpdate.bind(this), true);
-
-				this.updateStyles();
-			},
-
-			get: function (key) {
-				return localStorage.getItem(key);
-			},
-
-			onUpdate: function (e) {
-				var keys = [
-					'background',
-					'color',
-					'inverted',
-					'invertedBackgroundColor'
-				];
-
-				if (keys.indexOf(e.key) !== -1) {
-					this.updateStyles();
-				}
-			},
-
-			updateStyles: function () {
-				var dropzoneStyles = [
-					'background-color: ' + this.get('inverted'),
-					'color: ' + this.get('invertedBackgroundColor'),
-					'border-color: ' + this.get('invertedBackgroundColor')
-				];
-
-				var dropzoneHoverStyles = [
-					'background-color: ' + this.get('invertedBackgroundColor'),
-					'color: ' + this.get('invertedBackgroundColor'),
-					'border-color: ' + this.get('inverted')
-				];
-
-				var styles = [
-					'body { ' + dropzoneStyles.join(';\n') + ' }',
-					'body.hover { ' + dropzoneHoverStyles.join(';\n') + ' }',
-					'.icon polygon, .icon polyline, .icon line { stroke: ' + this.get('invertedBackgroundColor') + '}',
-					'.hover .icon polygon, .hover .icon polyline, .hover line { stroke: ' + this.get('inverted') + '}'
-				];
-
-				this._styleElement.innerHTML = styles.join('\n');
-			}
-		};
-
-		styleHandler.init();
 
 		window.onload = function () {
 
@@ -190,9 +150,8 @@
 			};
 		};
 
-		document.getElementById('reload').onclick = function () {
-			win.reload();
-			win.showDevTools();
+		document.getElementById('close-button').onclick = function () {
+			win.close();
 		}
 	})();
 </script>
